styles: Fix logo alignment

--- a/ember/app/styles/_bootstrap-theme-skylines.scss
+++ b/ember/app/styles/_bootstrap-theme-skylines.scss
@@ -111,7 +111,8 @@ abbr[title] {
 .logo {
   width: 24px;
   height: 24px;
-  margin: -6px 6px -6px 0;
+  margin: -2px 6px -2px 0;
+  vertical-align: bottom;
 }
 
 .navbar-brand {
